force-app/main/default/objects/Partner_NonROR__c/Partner_NonROR__c.object-meta.xml
<CustomObject>
    <label>Partner NonROR</label>
    <nameField>
        <displayFormat>CM-Partner-{000000}</displayFormat>
        <label>Partner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partners NonROR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>