force-app/main/default/objects/Partner_NonROR__c/fields/Administration__c.field-meta.xml
<CustomField>
    <fullName>Administration__c</fullName>
    <label>Administration</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>