force-app/main/default/objects/Partner_NonROR__c/fields/Application_Referral__c.field-meta.xml
<CustomField>
    <fullName>Application_Referral__c</fullName>
    <label>Application Referral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>