force-app/main/default/objects/Partner_NonROR__c/fields/Compensation__c.field-meta.xml
<CustomField>
    <fullName>Compensation__c</fullName>
    <label>Compensation</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>