force-app/main/default/objects/Partner_NonROR__c/fields/Country_with_Master_customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Country_with_Master_customer_Number__c</fullName>
    <formula>TEXT( ERP_Country_Code__c ) + Master_Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country with Master customer Number</label>
    <type>Text</type>
</CustomField>