force-app/main/default/objects/Partner_NonROR__c/fields/CY_Hardware_dollar__c.field-meta.xml
<CustomField>
    <fullName>CY_Hardware_dollar__c</fullName>
    <label>CY Hardware $</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>