force-app/main/default/objects/Partner_NonROR__c/fields/CY_Maintenance_Svcs_dollar__c.field-meta.xml
<CustomField>
    <fullName>CY_Maintenance_Svcs_dollar__c</fullName>
    <label>CY Maintenance Svcs $</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>