force-app/main/default/objects/Partner_NonROR__c/fields/CY_Maintenance_Svcs_percent__c.field-meta.xml
<CustomField>
    <fullName>CY_Maintenance_Svcs_percent__c</fullName>
    <label>CY Maintenance Svcs %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>