force-app/main/default/objects/Partner_NonROR__c/fields/Financial_Other_percent__c.field-meta.xml
<CustomField>
    <fullName>Financial_Other_percent__c</fullName>
    <label>Financial: Other %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>