force-app/main/default/objects/Partner_NonROR__c/fields/Help_Desk_Institute_Certified__c.field-meta.xml
<CustomField>
    <fullName>Help_Desk_Institute_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Help Desk Institute Certified</label>
    <type>Checkbox</type>
</CustomField>