force-app/main/default/objects/Partner_NonROR__c/fields/Last_Year_Other_dollar__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Other_dollar__c</fullName>
    <label>Last Year Other $</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>