force-app/main/default/objects/Partner_NonROR__c/fields/Maintenance_Program_s__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Program_s__c</fullName>
    <label>Maintenance Program(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Perform maintenance services</fullName>
            </value>
            <value>
                <fullName>Promote and sell NCR maint services</fullName>
            </value>
            <value>
                <fullName>Share maint services with NCR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>