force-app/main/default/objects/Partner_NonROR__c/fields/Marketing_Support__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Support__c</fullName>
    <label>Marketing Support</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>