force-app/main/default/objects/Partner_NonROR__c/fields/Other_Service_Offers__c.field-meta.xml
<CustomField>
    <fullName>Other_Service_Offers__c</fullName>
    <label>Other Service Offers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>