force-app/main/default/objects/Partner_NonROR__c/fields/Partnership_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Strategy__c</fullName>
    <label>Partnership Strategy</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>