force-app/main/default/objects/Partner_NonROR__c/fields/Prior_NCR_Reseller__c.field-meta.xml
<CustomField>
    <fullName>Prior_NCR_Reseller__c</fullName>
    <label>Prior NCR Reseller</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>