force-app/main/default/objects/Partner_NonROR__c/fields/Reselling_Used_Refurb_NCR__c.field-meta.xml
<CustomField>
    <fullName>Reselling_Used_Refurb_NCR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reselling Used/Refurb NCR</label>
    <type>Checkbox</type>
</CustomField>