force-app/main/default/objects/Partner_NonROR__c/fields/Reselling_Used_Refurb_NCR_Detail__c.field-meta.xml
<CustomField>
    <fullName>Reselling_Used_Refurb_NCR_Detail__c</fullName>
    <label>Reselling Used/Refurb NCR Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>