force-app/main/default/objects/Partner_NonROR__c/fields/Sales_Support__c.field-meta.xml
<CustomField>
    <fullName>Sales_Support__c</fullName>
    <label>Sales Support</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>