force-app/main/default/objects/Partner_NonROR__c/fields/Telecom_Technology_percent__c.field-meta.xml
<CustomField>
    <fullName>Telecom_Technology_percent__c</fullName>
    <label>Telecom/Technology %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>