force-app/main/default/objects/Partner_NonROR__c/fields/X2_Yrs_Support_dollar__c.field-meta.xml
<CustomField>
    <fullName>X2_Yrs_Support_dollar__c</fullName>
    <label>2 Yrs Support $</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>