force-app/main/default/objects/Partner_NonROR__c/fields/X2_Yrs_Support_percent__c.field-meta.xml
<CustomField>
    <fullName>X2_Yrs_Support_percent__c</fullName>
    <label>2 Yrs Support %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>