force-app/main/default/objects/Partner_NonROR__c/validationRules/CC_is_populated_force_entry_on_MCN.validationRule-meta.xml
<ValidationRule>
    <fullName>CC_is_populated_force_entry_on_MCN</fullName>
    <active>true</active>
    <errorConditionFormula>AND
( 
NOT(ispickval(  ERP_Country_Code__c ,&apos;&apos;)),
isblank( Master_Customer_Number__c) 
 )</errorConditionFormula>
    <errorDisplayField>Master_Customer_Number__c</errorDisplayField>
    <errorMessage>Master Customer Number can’t be blank If ERP Country Code is selected.</errorMessage>
</ValidationRule>