force-app/main/default/objects/Partner_NonROR__c/validationRules/Marketing_Activites.validationRule-meta.xml
<ValidationRule>
    <fullName>Marketing_Activites</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
 INCLUDES(Marketing_Activities__c, &apos;other&apos;),
ISBLANK( Other_Activities__c ) 
)</errorConditionFormula>
    <errorDisplayField>Other_Activities__c</errorDisplayField>
    <errorMessage>Please enter “Other Activities”</errorMessage>
</ValidationRule>