force-app/main/default/objects/Partner_NonROR__c/validationRules/MCN_is_populated_force_entry_on_ERP_CC.validationRule-meta.xml
<ValidationRule>
    <fullName>MCN_is_populated_force_entry_on_ERP_CC</fullName>
    <active>true</active>
    <errorConditionFormula>AND
( 
NOT(isblank( Master_Customer_Number__c)), 
(ispickval(  ERP_Country_Code__c ,&apos;&apos;) )
)</errorConditionFormula>
    <errorDisplayField>ERP_Country_Code__c</errorDisplayField>
    <errorMessage>ERP Country Code can’t be blank when Master Customer Number is entered.</errorMessage>
</ValidationRule>