force-app/main/default/objects/Partner_NonROR__c/validationRules/Reselling_Used_Refurb_NCR.validationRule-meta.xml
<ValidationRule>
    <fullName>Reselling_Used_Refurb_NCR</fullName>
    <active>true</active>
    <description>If Reselling used/refurb ncr is true then Reselling used/refurb ncr detail is a required field</description>
    <errorConditionFormula>AND
( Reselling_Used_Refurb_NCR__c  = true,
 ISBLANK(Reselling_Used_Refurb_NCR_Detail__c) 
)</errorConditionFormula>
    <errorDisplayField>Reselling_Used_Refurb_NCR_Detail__c</errorDisplayField>
    <errorMessage>Please enter “Reselling Used/Refurb NCR Detail”</errorMessage>
</ValidationRule>