force-app/main/default/objects/Partner_NonROR__c/validationRules/service_offers.validationRule-meta.xml
<ValidationRule>
    <fullName>service_offers</fullName>
    <active>true</active>
    <description>The field &apos;other service offers&apos; is a required field if service offers field equals other services.</description>
    <errorConditionFormula>AND
(
 INCLUDES( Service_Offers__c, &apos;Other Services&apos; ),
ISBLANK(Other_Service_Offers__c ) 
)</errorConditionFormula>
    <errorDisplayField>Other_Service_Offers__c</errorDisplayField>
    <errorMessage>Please enter “Other Service Offers”</errorMessage>
</ValidationRule>