force-app/main/default/objects/Partner_NonROR__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Country_Code__c</columns>
    <columns>Master_Customer_Number__c</columns>
    <columns>ERP_Country_Code__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>